# dep_gui

./: CMakeLists.txt  README.md  package.xml  todo.txt
dep_matrices/: 1.dep  2.dep  3.dep  4.dep  5.dep  6.dep  7.dep  8.dep  a.dep  b.dep  front_back.dep  lines.dep  lines_two.dep  mb.dep  squares.dep  zero.dep
include/dep_gui/: linearCombination.h  mainwindow.h
src/: main.cpp  mainwindow.cpp  matrix.cpp
ui/: mainwindow.ui
