<?xml version="1.0"?>
<package>
  <name>dep_gui</name>
  <version>0.1.0</version>
  <description>dep gui</description>
  <maintainer email="orpana.markus@gmail.com">Markus Orpana</maintainer>
  <author>Markus Orpana</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>roboy_dep</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>roboy_dep</run_depend>
</package>
